--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,11 +1,11 @@
-<div class="h3 pb-2 mb-4 text-success border-bottom border-success">
+<div class="h3 pb-2 mb-4 text-warning border-bottom border-warning">
     購入履歴一覧
      </div>
       <div class="col-md-10 offset-md-1">
        <div class="row g-3">
        <table class="table table-bordered">
          <thead>
-          <tr class="table-success">
+          <tr class="table-warning">
             <th>注文日</th>
             <th>配送先</th>
             <th>注文商品</th>
