--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -12,7 +12,7 @@
   <br>
   <!--テーブル-->
   <table class="table table-bordered">
-    <thead class="table-success">
+    <thead class="table-warning">
       <tr>
         <th>商品名</th>
         <th>単価(税込み)</th>
@@ -30,7 +30,7 @@
          <td class = "align-middle">
           <%= form_with model: cart_item, url: public_cart_item_path(cart_item.id), method: :patch do |f| %>
           <%= f.select :amount, *[1..10] %>
-          <%= f.submit '変更',class:"btn btn-success"%>
+          <%= f.submit '変更',class:"btn btn-warning"%>
           <% end %>
         </td>
         <!--小計を求めるためのメソッド(モデルに定義したもの)-->
@@ -56,7 +56,7 @@
   <table class="table table-bordered">
     <tbody>
       <tr>
-        <th class="table-success">合計金額</th>
+        <th class="table-warning">合計金額</th>
         <td colspan="2" >
           <!--合計金額の計算-->
           <% @cart_items.each do |cart_item| %>
