--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="h3 pb-2 mb-4 text-success border-bottom border-success">
+<div class="h3 pb-2 mb-4 text-warning border-bottom border-warning">
   会員情報編集
 </div>
 <div class='container'>
@@ -7,30 +7,30 @@
       <%= form_with model: @customer, url: "/public/customers/#{@customer.id}", method: :patch  do |f| %>
       <div class="form-group col-6">
        <strong>氏名</strong>
-        <%= f.text_field :first_name, class: "form-control border-success" %><%= f.text_field :last_name, class: "form-control border-success" %>
+        <%= f.text_field :first_name, class: "form-control border-warning" %><%= f.text_field :last_name, class: "form-control border-warning" %>
       </div>
       <div class="form-group col-6 ">
         <strong>フリガナ</strong>
-        <%= f.text_field :first_name_kana, class: "form-control border-success" %><%= f.text_field :last_name_kana, class: "form-control border-success" %>
+        <%= f.text_field :first_name_kana, class: "form-control border-warning" %><%= f.text_field :last_name_kana, class: "form-control border-warning" %>
       </div>
       <div class="form-group col-6">
        <strong>郵便番号</strong>
-        <%= f.text_field :post_code, class: "form-control border-success" %>
+        <%= f.text_field :post_code, class: "form-control border-warning" %>
       </div>
       <div class="form-group col-12">
        <strong>住所</strong>
-        <%= f.text_field :address, class: "form-control border-success" %>
+        <%= f.text_field :address, class: "form-control border-warning" %>
       </div>
       <div class="form-group col-6 ">
      <strong>電話番号</strong>
-        <%= f.text_field :telephone_number, class: "form-control border-success" %>
+        <%= f.text_field :telephone_number, class: "form-control border-warning" %>
       </div>
       <div class="form-group col-12">
        <strong>メールアドレス</strong>
-        <%= f.text_field :email, class: "form-control border-success" %>
+        <%= f.text_field :email, class: "form-control border-warning" %>
       </div>
       <div class="text-right">
-        <button type="submit" class="btn btn-success">編集内容を保存</button>
+        <button type="submit" class="btn btn-warning">編集内容を保存</button>
          <%= link_to "退会する", "/public/customers/unsubscribe", class: "btn btn-danger"  %>
       </div>
       <% end %>
