--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,4 +1,4 @@
 <div class="row">
   <div class="h1 mt-5 col-md-6 offset-md-3"></div>
-  <div class="h1 mt-5 h-25 col-md-6 offset-md-3">ご注文ありがとうございました！</div>
+  <div class="h1 mt-5 h-25 col-md-6 offset-md-3"><strong>注文有難うございました！</strong></div>
 </div>
