--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -27,7 +27,7 @@
             </tr>
             <tr>
               <td>
-                <%= link_to public_item_path(item.id) do %>
+                <%= link_to public_item_path(item.id),class:"text-secondary" do %>
                   <%= item.name %>
                 <% end %>
               </td>
