--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,17 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <!--アラート-->
+      <!--<div class="alert alert-primary">-->
+        <%= notice %>
+      <!--</div>-->
+      <!--<div class="alert alert-danger">-->
+        <%= alert %>
+      <!--</div>-->
+    
       <main>
         <%= yield %>
       </main>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
