--- a/app/views/public/items/_genres.html.erb
+++ b/app/views/public/items/_genres.html.erb
@@ -4,7 +4,11 @@
       </div>
       <ul class="list-group list-group-flush">
         <% genres.each do |genre| %>
-        <li class="list-group-item text-center"><%= link_to genre.name, public_items_path(genre_id: genre.id) %></li>
+        <li class="list-group-item text-center" >
+          <%= link_to public_items_path(genre_id: genre.id),class:"text-secondary" do %>
+            <%= genre.name %>
+          <% end %>
+          </li>
         <% end %>
       </ul>
     </div>
