--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,11 +1,12 @@
+  <div class="h3 pb-2 mb-4 text-warning border-bottom border-warning">
+  注文情報確認
+     </div>
+
 <div class="container">
   <div class="row justify-content-between">
-    <div class="col-mb-4">
-      <strong class="h4 text-secondary">注文情報確認</strong>
+     <div class="col-md-4">
     </div>
   </div>
-  <br>
-
   <div class = "row">
     <div class="col-md-8">
       <table class="table table-bordered  text-center">
