--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -8,7 +8,12 @@
   <h3><strong>支払い方法</strong></h3>
   <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
   <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
-
+  <i class="fab fa-cc-diners-club"></i>
+  <i class="fab fa-cc-discover"></i>
+  <i class="fab fa-cc-amex"></i>
+  <i class="fab fa-cc-jcb"></i>
+  <i class="fab fa-cc-mastercard"></i>
+  <i class="fab fa-cc-visa"></i>
   <p><%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
   <%= f.label :payment_method, Order.payment_methods_i18n[:transfer]%></p>
 
