--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,6 +3,11 @@
   	<div class='row'>
     	<div class='mx-auto'>
     		<p>©Nagano Cake.</p>
+    	<div class="ml-3">
+       <h4><i class="fab fa-instagram-square"></i>
+    			<i class="fab fa-facebook-square"></i>
+    			<i class="fab fa-twitter-square"></i></h4>
+    			</div>
     	</div>
     </div>
   </div>
