--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
               <%= form_with url: public_finder_path, local: true, method: :get do |f| %>
                 <%= f.text_field :word %>
                 <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"], ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
-                <%= f.submit "検索", class: "btn btn-primary" %>
+                <%= f.submit "検索", class: "btn btn-warning" %>
               <% end %>
             </div>
 
