--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,8 +1,8 @@
+<div class="h3 pb-2 mb-4 text-warning border-bottom border-warning">
+  ショッピングカート
+     </div>
 <div class="container text-center">
   <div class="row justify-content-between">
-    <div class="col-mb-4">
-      <strong class="h4 text-secondary">ショッピングカート</strong>
-    </div>
     <div class="col-mb-4">
       <%= link_to public_destroy_all_path, method: :delete do %>
         <button type="button" class="btn btn-danger">カートを空にする</button>
