--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -73,7 +73,7 @@
     <div class="col">
       <% if @cart_items.present? %>
         <%= link_to new_public_order_path do %>
-         <button type="button" class="btn btn-success">情報入力に進む</button>
+         <button type="button" class="btn btn-warning">情報入力に進む</button>
         <% end %>
       <% end %>
     </div>
