--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,25 +1,24 @@
-<h2>注文履歴詳細</h2>
-
+<div class="h3 pb-2 mb-4 text-warning border-bottom border-warning">
+  注文履歴詳細
+  </div>
 <div class="container">
-
-
   <div class="row">
 
     <!--注文情報-->
     <div class="col-md-6">
       <span style="font-weight: bold">注文情報</span>
       <table class="table table-bordered">
-          <tr><th class="table-active">注文日</th><td><%= @order.created_at.to_date %></td></tr>
+          <tr><th class="table-warning">注文日</th><td><%= @order.created_at.to_date %></td></tr>
           <tr>
-            <th class="table-active">配送先</th>
+            <th class="table-warning">配送先</th>
             <td>
               <%= @order.post_code %><br>
               <%= @order.ship_address %><br>
               <%= @order.name %>
             </td>
           </tr>
-          <tr><th class="table-active">支払い方法</th><td><%= @order.payment_method_i18n %></td></tr>
-          <tr><th class="table-active">ステータス</th><td><%= @order.status_i18n %></td></tr>
+          <tr><th class="table-warning">支払い方法</th><td><%= @order.payment_method_i18n %></td></tr>
+          <tr><th class="table-warning">ステータス</th><td><%= @order.status_i18n %></td></tr>
       </table>
     </div>
 
@@ -28,16 +27,16 @@
       <span style="font-weight: bold">請求内容</span>
       <table class="table table-bordered">
         <tr>
-          <th class="table-active">商品合計</th>
+          <th class="table-warning">商品合計</th>
           <% @order_subtotol = @order.total_payment - @order.shipping_cost %>
           <td>&yen;<%= @order_subtotol.to_s(:delimited) %></td>
         </tr>
         <tr>
-          <th class="table-active">配送料</th>
+          <th class="table-warning">配送料</th>
           <td>&yen;<%= @order.shipping_cost %></td>
         </tr>
         <tr>
-          <th class="table-active">ご請求額</th>
+          <th class="table-warning">ご請求額</th>
           <td>&yen;<%= @order.total_payment.to_s(:delimited) %></td>
         </tr>
       </table>
@@ -53,10 +52,10 @@
       <table class="table table-bordered ">
         <thead>
           <tr>
-            <th class="table-active">商品</th>
-            <th class="table-active">単価（税込）</th>
-            <th class="table-active">個数</th>
-            <th class="table-active">小計</th>
+            <th class="table-warning">商品</th>
+            <th class="table-warning">単価（税込）</th>
+            <th class="table-warning">個数</th>
+            <th class="table-warning">小計</th>
           </tr>
         </thead>
         <% @order.order_details.each do |order_detail| %>
